--- a/todo/app/views/todo_items/_todo_item.html.erb
+++ b/todo/app/views/todo_items/_todo_item.html.erb
@@ -2,23 +2,28 @@
 <div class= "row clearfix">
 	<% if todo_item.completed? %>
 		<div class="complete">
-	<%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+	<%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %>
+		<i style= "opacity:0.4;" class="fa fa-check"></i>
+		<% end %>
 		</div>
 		<div class="todo_item">
 		<p style="opacity:0.4;"><strike><%= todo_item.content %></strike></p>
 		</div>
 		<div class="trash">
 		<%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
+		<i class="fa fa-trash"></i>
 		</div>
 	<% else %>
 		<div class="complete">
-	<%= link_to "Mark as Complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+		<%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %>
+		<i class="fa fa-check"></i>
 		</div>
 		<div class="todo_item">
 		<p><%= todo_item.content %></p>
 		</div>
 		<div class="trash">
-		<%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
+			<%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
+		<i class="fa fa-trash"></i>
 		</div>
 		<% end %>
 </div>
